--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -62,6 +62,7 @@ jobs:
           channel: gha_interns     
           payload: | 
             {
+                "username": "deployer",
                 "text": "${{env.Letter}}"
             }
             
