--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -22,7 +22,7 @@ jobs:
           Letter=$(cat "${{ github.event.inputs.filename }}")
           echo "Letter<<EOF" >> $GITHUB_ENV
           echo "$Letter" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+        #   echo "EOF" >> $GITHUB_ENV
 
       - name: Display string
         run: |
@@ -37,6 +37,6 @@ jobs:
           payload: >-
             {
                 "username": "deployer",
-                "text": "${{env.Letter}}"
+                "text": "edmond"
             }
             
