--- a/.github/workflows/awsS3.yml
+++ b/.github/workflows/awsS3.yml
@@ -44,7 +44,7 @@ jobs:
                             {
                               "title": "Link to S3 bucket",
                               "value": "File URL: https://gha-s3-eddy.s3.us-east-1.amazonaws.com/${{ github.event.inputs.filename }}",
-                              "short": true
+                              "short": false
                             }
                           ],
                         "footer": "<https://github.com/${{ github.repository }}|${{ github.repository }}>"
